Finishing the About Us Page

--- a/homework_5/about-us.html
+++ b/homework_5/about-us.html
@@ -42,18 +42,17 @@
 <!--About Us Content-->
     <div id="AboutUsContext">
         <div class="PictureSide">
-            <img id="MegRyanPhoto" src="" alt="A photo of a smiling couple. The man is wearing green
-            and the woman has pink lipstick and blonde hair.">
-        </div>
-        <div id="AboutUsText">
             <p id="AboutUsBio">Here at Bun Bun, a community-driven passion is at the heart of every bun we make.
                 <br><br>We founded Bun Bun Bakeshop in July 2021 after rumenating on our dream for nearly six years. 
-                Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
+                <br><br>Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
                 <br><br>We are excited to become a part of your sweet journey! </p>
+            <img id="MegRyanPhoto" src="Images/Meg and John.png" alt="A photo of a smiling couple. The man is wearing green
+            and the woman has pink lipstick and blonde hair.">
             <p id="OwnerSignature">Meg & Ryan</p>
         </div>
+    </div>
+
 <!--Footer-->
-<footer id="PageFooter"></footer>
-    
+<footer id="PageAboutUsFoot"></footer>
 </body>
 </html>
