Fixing CSS Syntax

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -36,7 +36,7 @@
         <div class="BannerText">
             <h1 id="BunsOutText">Buns out, Funs out</h1>
             <p id="FavoritesBack">Your favorites are back</p>
-            <button class="BrowseButton">Browse Flavors</button>
+            <button class="BrowseButton"><b>Browse Flavors</b></button>
         </div>
     </div>
 
