Fixing duplicate IDs

--- a/homework_5/about-us.html
+++ b/homework_5/about-us.html
@@ -46,7 +46,7 @@
                 <br><br>We founded Bun Bun Bakeshop in July 2021 after rumenating on our dream for nearly six years. 
                 <br><br>Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
                 <br><br>We are excited to become a part of your sweet journey! </p>
-            <img id="MegRyanPhoto" src="Images/Meg and John.png" alt="A photo of a smiling couple. The man is wearing green
+            <img id="MegRyanPhoto" src="Images/Meg_John.png" alt="A photo of a smiling couple. The man is wearing green
             and the woman has pink lipstick and blonde hair.">
             <p id="OwnerSignature">Meg & Ryan</p>
         </div>
