--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -44,20 +44,20 @@
 <!--Citation: https://css-tricks.com/stacked-borders/-->
     <div id="ServiceContainer">
         <div class="ServiceBox">
-            <img id="ServiceLogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            <h3 id="ServiceTitle">Catering</h3>
+            <img class="ServiceLogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
+            <h3 class="ServiceTitle">Catering</h3>
             <p class="ServiceText">Weddings, parties, corporate events. <br>We do it all.</p>
             <button class="GeneralButton">Learn More</button>
         </div>
         <div class="ServiceBox">
-            <img id="ServiceLogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
-            <h3 id="ServiceTitle">About <br> Us</h3>
+            <img class="ServiceLogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
+            <h3 class="ServiceTitle">About <br> Us</h3>
             <p class="ServiceText">Learn about how we became Pittsburgh’s best bun shop.</p>
             <button class="GeneralButton">Learn More</button>
         </div>
         <div class="ServiceBox">
-            <img id="ServiceLogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <h3 id="ServiceTitle">Same-Day <br> Pick-Up</h3>
+            <img class="ServiceLogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
+            <h3 class="ServiceTitle">Same-Day <br> Pick-Up</h3>
             <p class="ServiceText">No need to wait.<br>Order online and pick up that day.</p>
             <button class="GeneralButton">Learn More</button>
         </div>
