Final Clean-up of All Documents

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,8 @@
 </head>
 <body>
 <!--Page Header-->
-<header class="pageheader">
-    <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+<header class="PageHeader">
+    <img class="HeaderLogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
     <!--Navigation Menu-->
         <!-- Citation: https://www.w3schools.com/css/css_navbar_horizontal.asp-->
     <ul id="TopBarNavigation">
@@ -42,7 +42,7 @@
 <!--Product Boxes-->
 <a href="product-detail.html">
     <div id="ProductBox1">
-         <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
+         <img src="Images/Pumpkin_Spice.png" class="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
     </div>
 </a>
 <div id="PumpkinSpiceTextContainer">
@@ -51,35 +51,35 @@
 
 
 <div id="ProductBox2">
-    <img src="Images/Original.png" id="ProductPhoto" alt="a classic white glazed cinnamon bun">
+    <img src="Images/Original.png" class="ProductPhoto" alt="a classic white glazed cinnamon bun">
 </div>
 <div id="OriginalContainer">
     <p> Original</p>
 </div>
 
 <div id="ProductBox3">
-    <img src="Images/Gluten Free Original.png" id="GFProductPhoto" alt="a classic white glazed cinnamon bun with GF logo to represent GF free">
+    <img src="Images/Gluten_Free_Original.png" id="GFProductPhoto" alt="a classic white glazed cinnamon bun with GF logo to represent GF free">
 </div>
 <div id="GlutenFreeContainer">
     <p> Gluten-Free Original</p>
 </div>
 
 <div id="ProductBox4">
-    <img src="Images/Carmel Pecan.png" id="ProductPhoto" alt="a brown glazed cinnamon bun with pecans on top">
+    <img src="Images/Carmel_Pecan.png" class="ProductPhoto" alt="a brown glazed cinnamon bun with pecans on top">
 </div>
 <div id="CarmelPecanContainer">
     <p>Carmel Pecan</p>
 </div>
 
 <div id="ProductBox5">
-    <img src="Images/Walnut.png" id="ProductPhoto" alt="a white glazed cinnamon bun">
+    <img src="Images/Walnut.png" class="ProductPhoto" alt="a white glazed cinnamon bun">
 </div>
 <div id="WalnutContainer">
     <p>Walnut</p>
 </div>
    
 <div id="ProductBox6">
-    <img src="Images/Blackberry.png" id="ProductPhoto" alt="a clear glazed cinnamon bun with red filling">
+    <img src="Images/Blackberry.png" class="ProductPhoto" alt="a clear glazed cinnamon bun with red filling">
 </div>
 <div id="BlackberryContainer">
     <p>Blackberry</p>
