Cleaning up the HTML across pages to make responsive

--- a/homework_6/about-us.html
+++ b/homework_6/about-us.html
@@ -27,7 +27,7 @@
         <li><a class="NavFont" href="product-browsing.html">Browse Flavors</a></li>
         <li><a class="NavFont" href="">Catering</a></li>
         <li><a class="NavFont" href="">Same-day Pick-up</a></li>
-        <li><a class="NavFont" href="">CART  </a><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
+        <li><a class="NavFont" href="shopping_cart.html">CART</a><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
     </ul>
 </header>
 <!--Bread Crumbs-->
@@ -40,8 +40,21 @@
 
 <h1 class="FlavorsHeader">About Us</h1>
 <!--About Us Content-->
-    <div id="AboutUsContext">
-        <div class="PictureSide">
+<div id="AboutUsContext">
+    <div id="PictureSide">
+        <img id="MegRyanPhoto" src="Images/Meg_John.png" alt="A photo of a smiling couple. The man is wearing green
+        and the woman has pink lipstick and blonde hair.">
+    </div>
+    <div id="BioTextSide">
+        <p id="AboutUsBio">Here at Bun Bun, a community-driven passion is at the heart of every bun we make.
+            <br><br>We founded Bun Bun Bakeshop in July 2021 after rumenating on our dream for nearly six years. 
+            <br><br>Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
+            <br><br>We are excited to become a part of your sweet journey! </p>
+        <p id="OwnerSignature">Meg & Ryan</p>
+    </div>
+</div>
+    <!--<div id="AboutUsContext">
+        <div id="PictureSide">
             <p id="AboutUsBio">Here at Bun Bun, a community-driven passion is at the heart of every bun we make.
                 <br><br>We founded Bun Bun Bakeshop in July 2021 after rumenating on our dream for nearly six years. 
                 <br><br>Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
@@ -50,7 +63,7 @@
             and the woman has pink lipstick and blonde hair.">
             <p id="OwnerSignature">Meg & Ryan</p>
         </div>
-    </div>
+    </div>-->
 
 <!--Footer-->
 <footer id="PageAboutUsFoot"></footer>
