--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -27,7 +27,7 @@
         <li><a class="NavFont" href="product-browsing.html">Browse Flavors</a></li>
         <li><a class="NavFont" href="">Catering</a></li>
         <li><a class="NavFont" href="">Same-day Pick-up</a></li>
-        <li><a class="NavFont" href="">CART  </a><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
+        <li><a class="NavFont" href="shopping_cart.html">CART  </a><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
     </ul>
 </header>
 <!--Banner Image-->
