--- a/homework_6/product-detail.html
+++ b/homework_6/product-detail.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+<!--Overlay for Product Details-->
 <body>
     <div id="overlay">
         <div id="ProductDetailBox">
@@ -26,7 +27,9 @@
                 </div>
                 <div id="RollsBox">
                     <p><b>How many rolls would you like?</b></p>
-                    <div class="OptionsBox">1</div>
+                    <div class="OptionsBox">1
+                        <img class="DropDownTriangle" src="Images/Exit.png" alt="a triangle for a dropdown menu">
+                    </div>
                 </div>
                 <button class="GeneralButton">Order</button>
             </div>
