saving to be safe

--- a/homework_6/product-detail.html
+++ b/homework_6/product-detail.html
@@ -28,7 +28,7 @@
                 <div id="RollsBox">
                     <p><b>How many rolls would you like?</b></p>
                     <div class="OptionsBox">1
-                        <img class="DropDownTriangle" src="Images/Exit.png" alt="a triangle for a dropdown menu">
+                        <span><img class="DropDownTriangle" src="Images/Exit.png" alt="a triangle for a dropdown menu"></span>
                     </div>
                 </div>
                 <button class="GeneralButton">Order</button>
