--- a/homework_6/shopping_cart.html
+++ b/homework_6/shopping_cart.html
@@ -1,1 +1,48 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+<title>Shopping Cart</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="main.js"></script>
+<link rel="stylesheet" href="shopping_cart.css">
+</head>
 
+<!--
+<body onload="doShowAll()">
+	<h2>Shopping Cart with HTML5 Storage Project</h2>
+	<p>Insert items and quantity for your shopping cart. </p>
+	<form name=ShoppingList>
+
+		<div id="main">
+			<table>
+				<tr>
+
+					<td><b>Item:</b><input type=text name=name></td>
+					<td><b>Quantity:</b><input type=text name=data></td>
+
+				</tr>
+
+				<tr>
+					<td>
+					    <input type=button value="Save"   onclick="SaveItem()"> 
+					    <input type=button value="Update" onclick="ModifyItem()"> 
+					    <input type=button value="Delete" onclick="RemoveItem()">
+					</td>
+				</tr>
+			</table>
+		</div>
+
+		<div id="items_table">
+			<h3>Shopping List</h3>
+			<table id=list></table>
+			<p>
+				<label><input type=button value="Clear" onclick="ClearAll()">
+					<i>* Delete all items</i></label>
+			</p>
+		</div>
+	</form>
+    -->
+</body>
+</html>
