Trying out select boxes methods

--- a/homework_6/product-detail copy.html
+++ b/homework_6/product-detail copy.html
@@ -23,13 +23,14 @@
             <div id="OptionBoxSide">
                 <label for="glazeType">Choose your glaze </label>
                 <select id="glazeType" name="glazeType">
+                    <option value="choose">Please choose a glaze</option>
                     <option value="vanillaMilk">Vanilla Milk (recommended)</option>
                     <option value="sugarMilk">Sugar Milk</option>
                     <option value="doubleChocolate">Double Chocolate</option>
                     <option value="None">None</option>
                 </select><br>
-                <label for="quantity">How many rolls would you like?</label>
-                <select id="quantity" name="quantity">
+                <label for="rollQuantity">How many rolls would you like?</label>
+                <select id="rollQuantity" name="rollQuantity">
                     <option value="one">1</option>
                     <option value="three">3</option>
                     <option value="six">6</option>
