Bringing JS interactivity to selection menus

--- a/homework_6/product-browsing.html
+++ b/homework_6/product-browsing.html
@@ -40,7 +40,7 @@
 <h1 class="FlavorsHeader">Flavors</h1>
 
 <!--Product Boxes-->
-<a href="product-detail.html">
+<a href="product-detail copy.html">
     <div id="ProductBox1">
          <img src="Images/Pumpkin_Spice.png" class="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
     </div>
