Connecting JS and running test changes

--- a/homework_6/product-detail.html
+++ b/homework_6/product-detail.html
@@ -35,7 +35,7 @@
                              alt="a triangle for a dropdown menu"></span>
                     </div>
                 </div>
-                <button class="GeneralButton">Order</button>
+                <button class="GeneralButton" onclick="upCounter()">Order</button>
             </div>
             <div id="DescriptionSide">
                 <img id="PumpkinPic" src="Images/pumpkin_with_border.png" alt="a cinnamon bun with a clear glaze and 
@@ -43,8 +43,6 @@
                 <p id="DescriptionText">An aromatic, fall-inspired bun available for <br> a limited time.</p>
                 <p>*Contains gluten</p>
                 <p>*Contains wheat</p>
-
-                
             </div>
         </div>
     </div>
