--- a/homework_6/shopping_cart.html
+++ b/homework_6/shopping_cart.html
@@ -20,7 +20,7 @@
         <li><a class="NavFont" href="product-browsing.html">Browse Flavors</a></li>
         <li><a class="NavFont" href="">Catering</a></li>
         <li><a class="NavFont" href="">Same-day Pick-up</a></li>
-        <li><a class="NavFont" href="shopping_cart.html">CART</a><span><p id="displayCount">0</p></span><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
+        <li><a class="NavFont" href="shopping_cart.html">CART</a><span><p id="countValue" onclick="upCounter()">0</p></span><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
     </ul>
 </header>
 <!--Bread Crumbs-->
@@ -76,7 +76,6 @@
     </div>
 </div>
 </div>
-<p id="testing" onclick="upCounter()">1</p>
 <button onclick="upCounter()">test</button>
 </body>
 </html>
