Getting the cart icon counter to be persistent

--- a/homework_6/product-detail copy.html
+++ b/homework_6/product-detail copy.html
@@ -49,7 +49,7 @@
                 <!--<input id="submit" type="submit" value="Submit"/>-->
                 </form>
                 <br>
-                <button onclick="upCounter()">test</button>
+                <button onclick="increaseCartItemCount()">test</button>
             </div>
             <div id="exitLogoSide">
                 <a href="product-browsing.html"><img id="exitLogo" src="Images/Exit.png" alt="exit button image"></a>
