--- a/homework_6/shopping_cart.html
+++ b/homework_6/shopping_cart.html
@@ -8,7 +8,17 @@
 <script type="text/javascript" src="main.js"></script>
 <link rel="stylesheet" href="shopping_cart.css">
 </head>
-<body onload="pageLoad()>
+<body onload="pageLoad()">
+
+<!--Image citations: 
+Photos via Unsplash and Flickr
+Michael Fallon - https://unsplash.com/photos/DnGGIffnjTY
+Dilyara Garifullina - https://unsplash.com/photos/WmpGRa898oU
+Yosep Sugiarto - https://unsplash.com/photos/1PEqqv4i2iM
+Gayatri Malhotra - https://unsplash.com/photos/MfuXRXCEy4k
+Bour3 - https://www.flickr.com/photos/bour3/8157517971/
+Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
+
 <!--Page Header-->
     <header class="PageHeader">
         <img class="HeaderLogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
@@ -21,7 +31,7 @@
         <li><a class="NavFont" href="product-browsing.html">Browse Flavors</a></li>
         <li><a class="NavFont" href="">Catering</a></li>
         <li><a class="NavFont" href="">Same-day Pick-up</a></li>
-        <li><a class="NavFont" href="shopping_cart.html">CART</a><span><p id="cartItemCount" onclick="upCounter()">0</p></span><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
+        <li><a class="NavFont" href="shopping_cart.html">CART</a><span><p id="cartItemCount" onclick="increaseCartItemCount()">0</p></span><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
     </ul>
 </header>
 <!--Bread Crumbs-->
@@ -77,6 +87,7 @@
     </div>
 </div>
 </div>
-<button onclick="upCounter()">test</button>
+<!--Footer-->
+<footer class="pageFooter"></footer> 
 </body>
 </html>
